cambie el color de fondo

--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,9 @@ sans-serif;
 }
 
 h1{
-  font-family: 'Moirai One',
-      system-ui;
+  font-family: 'Moirai One',system-ui;
+  text-align: center;
+  color: aliceblue;
 }
 
 body{
