--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ h1{
   font-family: 'Moirai One',system-ui;
   text-align: center;
   color: aliceblue;
+  font-size: 40px;
 }
 
 
@@ -39,4 +40,6 @@ h1{
 footer{
   background-color: #3C0753;
   color: aliceblue;
+  font-family: 'Noto Sans SC',sans-serif;
+  font-size: 15px;
 }
