--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,20 @@ h1{
   font-size: 40px;
 }
 
+.div-contenedor-card{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contenedor-card{
+  width: 500px;
+  
+}
+
 .cards{
-  width: 300px;
- 
+  width: 100%;
+  
 }
 
 footer{
